[package]
name = "search-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
indicatif = "0.17.9"
colored = "2.1.0"
search = { path = "../search" }
clap = { version = "4.5.21", features = ["derive"] }
ic-agent = "0.39.1"
ic-utils = "0.39.0"
tokio = { version = "1.41.1", features = ["full"] }
candid = "0.10.10"

[dev-dependencies]
